<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_white_24dp"
            android:checked="true"
            android:title="@string/nav_dashboard">
        </item>
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_trending_up_white_24dp"
            android:checked="true"
            android:title="@string/nav_activity">
        </item>
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_access_time_white_24dp"
            android:checked="true"
            android:title="@string/nav_tasks">
        </item>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_white_24dp"
            android:checked="true"
            android:title="@string/nav_setting">
        </item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_subdirectory_arrow_right_white_24dp"
            android:checked="true"
            android:title="@string/nav_logout">
        </item>
    </group>
</menu>